pushing out a placeholder without navbar items

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 <html>
-  <!-- banner -->  
+  <!-- banner -->
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)), url(https://res.cloudinary.com/dd8gqkm50/image/upload/v1586682608/BirdThree/A13A5BD0-79B0-47DA-B024-E49E4B44CDAC_2_muj2jj.png);">
     <div class="container">
       <h1>BIRD THREE</h1>
-      <p>August 2020</p>
+      <!-- <p>August 2020</p> -->
       <!-- <a class="btn btn-flat" href="#">Learn More</a> -->
     </div>
   </div>
