--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,12 +10,12 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Bird Three</a>
       </li>
-      <li class="nav-item">
+      <!--  <li class="nav-item">
         <a class="nav-link" href="/pages/about_us">About Us</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/apparel/index">Apparel</a>
-      </li>
+      </li> -->
       <!-- <li class="nav-item dropdown">
             <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
