added squiggle background

--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,9 +1,9 @@
 <html>
   <!-- banner -->
-  <div class="about-us-background" style="background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)), url();">
+  <div class="about-us-background" style="background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)), url(https://res.cloudinary.com/dd8gqkm50/image/upload/v1587045132/BirdThree/aboutusbackground_dr4x04.png);">
     <div class="intro-container">
       <div class="intro-text">
-        <p>A Chinese Canadian couple who moved to Shanghai and got bored of buying clothes. Instead, started to design and making their own apparel for themselves. </p>
+        <!-- <p>A Chinese Canadian couple who moved to Shanghai and got bored of buying clothes. Instead, started to design and making their own apparel for themselves. </p> -->
         <!-- <a class="btn btn-flat" href="#">Learn More</a> -->
       </div>
     </div>
