--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -14,12 +14,13 @@
   color: black;
   // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-family: 'Amatic SC', cursive;
-  font-size: 60px;
+  font-size: 65px;
   // font-weight: bold;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 450px;
+  font-weight: bold;
 }
 
 .banner p {
